--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Backchodi Bro UI</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="hi.css">
 </head>
 <body class="bg-[#0d1321] text-white min-h-screen flex flex-col items-center justify-center p-4">
 
