--- a/index.html
+++ b/index.html
@@ -7,31 +7,58 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="hi.css">
 </head>
-<body class="bg-[#0d1321] text-white min-h-screen flex flex-col items-center justify-center p-4">
+<body class="app-container">
 
-  <h1 class="text-3xl font-bold mb-4">Backchodi Bro</h1>
-
-  <!-- Google Login -->
-  <button id="googleLoginBtn" class="mb-6 px-6 py-3 bg-white text-black rounded-lg font-semibold shadow hover:scale-105 transition">
-    🔐 Login with Google
-  </button>
-
-  <!-- Match Card -->
-  <div class="bg-[#1e293b] p-6 rounded-xl w-full max-w-md text-center space-y-4">
-    <div class="flex items-center justify-between">
-      <img src="download.webp" class="w-16 h-16 rounded-full border-2 border-blue-500" />
-      <span class="text-xl font-bold">VS</span>
-      <img src="download.webp" class="w-16 h-16 rounded-full border-2 border-red-500" />
-    </div>
-    <button class="join-btn mt-4 px-4 py-2 bg-green-600 rounded-xl font-semibold hover:bg-green-700">
-      🚀 JOIN NOW
+  <!-- Top Bar -->
+  <div class="top-bar">
+    <img src="homepage-icon-house-illustration-sign-home-symbol-building-logo-vector.jpg" alt="Home" class="icon">
+    <input type="text" placeholder="Search" class="search-input">
+    <img src="1200x630wa.png" alt="Flash" class="icon">
+    <button id="googleLoginBtn" class="group relative flex items-center gap-3 px-6 py-3 rounded-xl bg-white text-black font-semibold border border-gray-300 shadow-md hover:shadow-xl transition duration-300 overflow-hidden hover:scale-105">
+      <span class="absolute inset-0 bg-gradient-to-r from-blue-500 via-pink-500 to-yellow-500 opacity-0 group-hover:opacity-20 blur-md transition duration-500"></span>
+      <svg class="w-5 h-5 z-10" viewBox="0 0 533.5 544.3" xmlns="http://www.w3.org/2000/svg">
+        <path d="M533.5 278.4c0-17.4-1.6-34.3-4.6-50.5H272v95.4h147.4c-6.4 34.6-25.2 63.9-53.7 83.3v69.2h86.7c50.7-46.7 81.1-115.5 81.1-197.4z" fill="#4285F4"/>
+        <path d="M272 544.3c72.6 0 133.6-24 178.2-65.3l-86.7-69.2c-24.1 16.2-55 25.7-91.5 25.7-70.4 0-130.1-47.5-151.5-111.4H32.3v69.8C76.5 474.8 168.6 544.3 272 544.3z" fill="#34A853"/>
+        <path d="M120.5 323.9c-10.7-31.2-10.7-64.7 0-95.9v-69.8H32.3c-38.4 76.8-38.4 168.7 0 245.5l88.2-69.8z" fill="#FBBC05"/>
+        <path d="M272 107.7c39.5-.6 77.3 13.5 106.4 38.3l79.6-79.6C410.9 23.2 343.9 0 272 0 168.6 0 76.5 69.5 32.3 178.2l88.2 69.8C141.9 155.2 201.6 107.7 272 107.7z" fill="#EA4335"/>
+      </svg>
+      <span class="z-10">Login with Google</span>
     </button>
   </div>
 
-  <!-- Firebase Scripts -->
+  <!-- Cards Container -->
+  <div class="cards-container">
+    <div class="card card-with-button">
+      <div class="players">
+        <img src="download.webp" alt="Player 1" class="avatar">
+        <img src="1200x630wa.png" alt="VS" class="vs-icon">
+        <img src="download.webp" alt="Player 2" class="avatar">
+      </div>
+      <button class="join-btn">JOIN NOW</button>
+    </div>
+    <div class="card card-with-button">
+      <div class="players">
+        <img src="download.webp" alt="Player 1" class="avatar">
+        <img src="1200x630wa.png" alt="VS" class="vs-icon">
+        <img src="download.webp" alt="Player 2" class="avatar">
+      </div>
+      <button class="join-btn">JOIN NOW</button>
+    </div>
+  </div>
+
+  <!-- Bottom Nav -->
+  <div class="bottom-nav">
+    <img src="OIP.png" alt="Hot" class="icon">
+    <img src="pngtree-trophy-sign-icon-champion-vector-picture-image_10545046.png" alt="Trophy" class="icon">
+    <img src="Screenshot 2025-07-08 205353.png" alt="Community" class="icon">
+    <img src="online-chat-computer-icons-symbol-icon-design-png-favpng-zZZdFEDePjG57FWR28cctNnca.jpg" alt="Chat" class="icon">
+    <img src="download.webp" alt="Profile" class="icon rounded-full">
+  </div>
+
+  <!-- Firebase Script -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getAuth, signInWithPopup, GoogleAuthProvider, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import { getAuth, signInWithPopup, GoogleAuthProvider } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
     import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
     const firebaseConfig = {
@@ -40,37 +67,36 @@
       projectId: "krish-d0206",
       storageBucket: "krish-d0206.appspot.com",
       messagingSenderId: "669277883647",
-      appId: "1:669277883647:web:59c952c78093e072a910ca"
+      appId: "1:669277883647:web:59c952c78093e072a910ca",
+      measurementId: "G-EQVQR43FEZ"
     };
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
-    const db = getFirestore(app);
     const provider = new GoogleAuthProvider();
+    const db = getFirestore(app);
 
+    // Google Login
     const loginBtn = document.getElementById("googleLoginBtn");
-    let currentUser = null;
-
-    // Login
     loginBtn.addEventListener("click", () => {
       signInWithPopup(auth, provider)
-        .then(result => {
-          alert(`✅ Welcome ${result.user.displayName}`);
+        .then((result) => {
+          const user = result.user;
+          alert(`🔥 Welcome ${user.displayName}`);
         })
-        .catch(err => {
-          alert("Login Failed: " + err.message);
+        .catch((error) => {
+          console.error("Login Failed:", error.message);
         });
     });
 
-    // JOIN NOW button logic
-    document.querySelectorAll(".join-btn").forEach(btn => {
+    // JOIN NOW Button
+    document.querySelectorAll(".join-btn").forEach((btn) => {
       btn.addEventListener("click", async () => {
         const user = auth.currentUser;
         if (!user) {
           alert("⚠️ Please login first!");
           return;
         }
-
         try {
           const docRef = await addDoc(collection(db, "roastMatches"), {
             player1: user.uid,
@@ -86,21 +112,12 @@
             votes2: 0,
             createdAt: new Date()
           });
-
-          alert("🔥 Match Created!");
+          // Redirect to match-room page with matchId
           window.location.href = `match-room.html?matchId=${docRef.id}`;
         } catch (e) {
           console.error("❌ Firestore Error: ", e);
-          alert("Error creating match");
         }
       });
-    });
-
-    // Check login status on load
-    onAuthStateChanged(auth, (user) => {
-      if (user) {
-        currentUser = user;
-      }
     });
   </script>
 
